Bug 318324 - autosave loses focus
Summary: autosave loses focus
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-14 08:14 UTC by Moritz Bunkus
Modified: 2017-07-01 21:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Moritz Bunkus 2013-04-14 08:14:17 UTC
When you're in the middle of typing and autosave kicks in the focus after saving is... well I don't know where it is, but it is not set back to the input field it had focus before. This requires taking your hand from the keyboard and make a mouse click in order to being able to continue typing.

This is very annoying and breaks concentration, especially if you've got a pretty low autosave interval (because you're paranoid like me: 3min). The focus should be set back to where ever it was before autosaving kicked in.
Comment 1 Cristian Oneț 2014-09-29 17:55:32 UTC
Git commit a59078d3007e75685d2b0bfbefeb570dcf873d23 by Cristian Oneț.
Committed on 29/09/2014 at 17:50.
Pushed by conet into branch 'master'.

Restore the focus widget after an autosave.

M  +6    -0    kmymoney/kmymoney.cpp

http://commits.kde.org/kmymoney/a59078d3007e75685d2b0bfbefeb570dcf873d23