Restore the focus widget after an autosave.

BUG: 318324