kmymoney/kmymoney.cpp
@@ -7084,6 +7084,8 @@ void KMyMoneyApp::slotPluginUnplug(KPluginInfo* info)
 void KMyMoneyApp::slotAutoSave(void)
 {
   if (!d->m_inAutoSaving) {
+    // store the focus widget so we can restore it after save
+    QPointer<QWidget> focusWidget = qApp->focusWidget();
     d->m_inAutoSaving = true;
     KMSTATUS(i18n("Auto saving..."));
 
@@ -7097,6 +7099,10 @@ void KMyMoneyApp::slotAutoSave(void)
     }
 
     d->m_inAutoSaving = false;
+    if (focusWidget && focusWidget != qApp->focusWidget()) {
+      // we have a valid focus widget so restore it
+      focusWidget->setFocus();
+    }
   }
 }
 
